--- a/style.css
+++ b/style.css
@@ -2,5 +2,17 @@ body
 {
     background-color: #333;
     color: antiquewhite;
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.frame
+{
+    width: 500px;
+    height: 500px;
+    background-color: aquamarine;
 }
 
