--- a/style.css
+++ b/style.css
@@ -7,12 +7,13 @@ body
     justify-content: center;
     flex-direction: column;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .frame
 {
-    width: 500px;
+    width: 80vw;
     height: 500px;
-    background-color: aquamarine;
+    background-color: teal;
 }
 
