--- a/style.css
+++ b/style.css
@@ -65,5 +65,11 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: 0.3s ease;
 }
 
+
+.options:hover
+{
+    transform:scale(1.2);
+}
