--- a/style.css
+++ b/style.css
@@ -71,5 +71,10 @@ body
 
 .options:hover
 {
-    transform:scale(1.2);
+    transform:scale(1.1);
+}
+
+.options:active
+{
+    transform: scale(0.9);
 }
